# AGA8

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_aga8.cpp
include/: aga8_pvt_calculator.h  aga8_tables.h
src/: aga8_pvt_calculator.cpp  aga8_tables.cpp
